progress made on scrape

--- a/attack_scripts/jquery_1.html
+++ b/attack_scripts/jquery_1.html
@@ -1,1 +1,1 @@
-<script>s={url:"http://localhost:3000/1",method:"POST",headers:{"content-type":"application/json"},data:'{"u":"www.test.com","f":"2"}'};$.ajax(s).done();</script>
+<script>s={url:"http://localhost:3000/a/1",method:"POST",headers:{"content-type":"application/json"},data:'{"u":"www.test.com","f":"2"}'};$.ajax(s).done();</script>
